Coordonner les liens aux projets

--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
 <body>
     <div>
         <h3>Mes projets Javascript</h3>
-        <ul><a href=""></a></ul>
-        <ul><a href=""></a></ul>
-        <ul><a href=""></a></ul>
-        <ul><a href=""></a></ul>
-        <ul><a href=""></a></ul>
-        <ul><a href=""></a></ul>
-        <ul><a href=""></a></ul>
-        <ul><a href=""></a></ul>
-        <ul><a href=""></a></ul>
+        <ul><a href="Projects/JavaScript/1_Mousemove/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/2_SCROLL_NAVBAR/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/3_SCROLL_POPUP/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/4_SIDEBAR/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/5_BODY_CHANGE_COLOR(RGB)/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/6_Bubble/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/7_GenerateurDePasse/Projet - PasswordGenerator/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/8_Pokémon_Générateurs_de_paroles_(citations)/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/9_Booking_Gestion_de_dates/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/10_Chronomètre/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/11_API_Thermos/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/12_ API_Kanalablag/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/13_ API_Country/index.html"></a></ul>
+        <ul><a href="Projects/JavaScript/14_Les_dalons/index.html"></a></ul>
     </div>
 </body>
 </html>
