Mise en forme de l'interface des projets javascript

--- a/Projects/JavaScript/7_GenerateurDePasse/Projet - PasswordGenerator/index.html
+++ b/Projects/JavaScript/7_GenerateurDePasse/Projet - PasswordGenerator/index.html
@@ -39,7 +39,7 @@
         <input type="checkbox" name="special" id="special" />
         <label for="special">!@*</label>
       </div>
-      <button>Generate Password</button>
+      <button>Générer un mot de passe</button>
     </div>
     <script src="script.js"></script>
   </body>
