--- a/Projects/JavaScript/4_SIDEBAR/index.html
+++ b/Projects/JavaScript/4_SIDEBAR/index.html
@@ -40,7 +40,25 @@
       hic. Aliquid necessitatibus sed, beatae ex ad quia praesentium facere error provident itaque laudantium, eum animi
       assumenda placeat eaque earum sit cumque obcaecati sequi ipsam consectetur! Repellendus, nesciunt! Molestiae
       maiores sed laborum voluptatum facilis laboriosam.</p>
-  </section>
+  
+      <div>
+        <h3>Mes projets Javascript</h3>
+        <!-- <ul><a href="Projects/JavaScript/1_Mousemove/index.html">Manipulation de la souris</a></ul>
+        <ul><a href="Projects/JavaScript/2_SCROLL_NAVBAR/index.html">La barre de navigation cachée</a></ul> -->
+        <!-- <ul><a href="Projects/JavaScript/3_SCROLL_POPUP/index.html">La notification avec Popup</a></ul> -->
+        <ul><a href="Projects/JavaScript/4_SIDEBAR/index.html">La barre de navigation Hamburger</a></ul>
+        <!-- <ul><a href="Projects/JavaScript/5_BODY_CHANGE_COLOR(RGB)/index.html">Générateur de couleur</a></ul> -->
+        <ul><a href="Projects/JavaScript/6_Bubble/index.html">Allons éclater les bulles &#x1F60A;</a></ul>
+        <ul><a href="Projects/JavaScript/7_GenerateurDePasse/Projet - PasswordGenerator/index.html">Générateur de mot de passe</a></ul>
+        <ul><a href="Projects/JavaScript/8_Pokémon_Générateurs_de_paroles_(citations)/index.html">Générateur de citations de Pokémon</a></ul>
+        <!-- <ul><a href="Projects/JavaScript/9_Booking_Gestion_de_dates/index.html">Contraintes de dates</a></ul> -->
+        <ul><a href="Projects/JavaScript/10_Chronomètre/index.html">Mon Chronomètre</a></ul>
+        <ul><a href="Projects/JavaScript/11_API_Thermos/index.html">Température actuelle</a></ul>
+        <!-- <ul><a href="Projects/JavaScript/12_ API_Kanalablag/index.html">Générateur de blagues &#x1F60A;</a></ul> -->
+        <ul><a href="Projects/JavaScript/13_ API_Country/index.html">Les pays du mondes </a></ul>
+        <!-- <ul><a href="Projects/JavaScript/14_Les_dalons/index.html">Un portfolio aléatoire des utilisateurs</a></ul> -->
+    </div>
+    </section>
 
   <script src="script.js"></script>
 </body>
