--- a/contactPage.html
+++ b/contactPage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PORTFOLIO</title>
+  <title>Contact</title>
 
   <link rel="stylesheet" href="css/style.css">
   
@@ -29,7 +29,7 @@
 
   <section class="content">
     <div>
-      <h1>Mon portfolio</h1>
+      <h1>Mon contact</h1>
     </div>
     
     
