Page experiences pprofessionnelles

--- a/navBar.html
+++ b/navBar.html
@@ -14,8 +14,10 @@
             </div>
         </div>
         <a href="index.html"><li>Accueil</li></a>
-        <a href="cvPage.html"><li>Mon CV</li></a>
-        <a href="projectPage.html"><li>Projets</li></a>
+        <a href="formationPage.html"><li>Formations</li></a>
+        <a href="expProfPage.html"><li>Expériences Professionnelles</li></a>
+        <a href="skillPage.html"><li>Compétences</li></a>
+        <a href="projectPage.html"><li>Exemples de Projets</li></a>
         <a href="contactPage.html"><li>Contact</li></a>
     </ul>
   </div> 
