--- a/projectPage.html
+++ b/projectPage.html
@@ -37,7 +37,7 @@
             <div class="titleProject" onclick="displayProjects(1)">
               
                 <span class="folder-summary" >
-                  <svg xmlns="http://www.w3.org/2000/svg" class="svpPlus_show_1" width="30" height="30" fill="currentColor" class="bi bi-folder-fill" viewBox="0 0 16 16">
+                  <svg xmlns="http://www.w3.org/2000/svg" style="fill:#70556e;"class="svpPlus_show_1" width="30" height="30" fill="currentColor" class="bi bi-folder-fill" viewBox="0 0 16 16">
                     <path d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3zm-8.322.12C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139z"/>
                   </svg>
                   <svg xmlns="http://www.w3.org/2000/svg" class="svpPlus_hide_1" style="display: none;" width="30" height="30" class="bi bi-folder-minus" viewBox="0 0 16 16">
@@ -156,7 +156,7 @@
         <div >
             <div class="titleProject" onclick="displayProjects(2)">
                 <span class="folder-summary" >
-                  <svg xmlns="http://www.w3.org/2000/svg" class="svpPlus_show_2" width="30" height="30" fill="currentColor" class="bi bi-folder-fill" viewBox="0 0 16 16">
+                  <svg xmlns="http://www.w3.org/2000/svg" style="fill:#70556e;" class="svpPlus_show_2" width="30" height="30" fill="currentColor" class="bi bi-folder-fill" viewBox="0 0 16 16">
                     <path d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3zm-8.322.12C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139z"/>
                   </svg>
                   <svg xmlns="http://www.w3.org/2000/svg" class="svpPlus_hide_2" style="display: none;" width="30" height="30" class="bi bi-folder-minus" viewBox="0 0 16 16">
