Color of progressBar skill page

--- a/skillPage.html
+++ b/skillPage.html
@@ -37,7 +37,7 @@
               <div class="SkillBar">
                 <div id="Skill-ARDUINO">
                   <span class="Skill-Area ">Arduino</span>
-                  <span class="PercentText ">70%</span>
+                  <span class="PercentText ">75%</span>
                 </div>
               </div>
               <div class="SkillBar">
@@ -60,9 +60,9 @@
                 </div>
               </div>
               <div class="SkillBar">
-                <div id="Skill-JS">
-                  <span class="Skill-Area ">JavaScript</span>
-                  <span class="PercentText ">65%</span>
+                <div id="Skill-JS" >
+                  <span class="Skill-Area "style="color:#000000;">JavaScript</span>
+                  <span class="PercentText "style="color:#000000;">65%</span>
                 </div>
               </div>
               <div class="SkillBar">
@@ -99,9 +99,9 @@
           <div id="SkillBox">
               
               <div class="SkillBar">
-                <div id="Skill-JS" style="background-color: #42caf5;">
-                  <span class="Skill-Area " >Flutter</span>
-                  <span class="PercentText ">65%</span>
+                <div id="Skill-JS" style="background-color: #42caf5; ">
+                  <span class="Skill-Area " style="color:#000000;">Flutter</span>
+                  <span class="PercentText " style="color:#000000;">65%</span>
                 </div>
               </div>
               <div class="SkillBar">
@@ -126,8 +126,8 @@
               </div>
               <div class="SkillBar">
                 <div id="Skill-WINDEV">
-                  <span class="Skill-Area ">Windev 27</span>
-                  <span class="PercentText ">75%</span>
+                  <span class="Skill-Area "style="color:#000000;">Windev 27</span>
+                  <span class="PercentText "style="color:#000000;">75%</span>
                 </div>
               </div>
               
