--- a/expProfPage.html
+++ b/expProfPage.html
@@ -8,11 +8,12 @@
   <title>Expériences professionnelles</title>
 
   <link rel="stylesheet" href="css/style.css">
-  
+  <link rel="shortcut icon" sizes="48x48" href="img/LogoINV.png" />
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script><!--Navigation bar link jquery-->
-  
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script> <!-- go to top of the page -->
+ 
 </head>
 
 <body>
@@ -316,7 +317,15 @@
     </div>
     
 </div>
-
+    <!-- TOP -->
+    <div id="return-placeholder">
+    </div>
+    <script>
+        $(function(){
+          $("#return-placeholder").load("returnButton.html");
+        });
+    </script>
+    <!--  --> 
     
   </section>
   <script src="js/script.js"></script>
