--- a/navBar.html
+++ b/navBar.html
@@ -13,8 +13,17 @@
                 <div class="text">Istinnie Nadiezda VELONKASINA</div>
             </div>
         </div>
-        <a href="index.html"><li>Accueil</li></a>
-        <a href="formationPage.html"><li>Formations</li></a>
+        <a href="index.html">
+            <li>
+                <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom: -3px;" width="20" height="20" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+                    <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
+                  </svg>
+                Accueil</li>
+        </a>
+        <a href="formationPage.html"><li>
+            
+            Formations</li>
+        </a>
         <a href="expProfPage.html"><li>Expériences Professionnelles</li></a>
         <a href="skillPage.html"><li>Compétences</li></a>
         <a href="projectPage.html"><li>Exemples de Projets</li></a>
