mise en forme des side bar de toutes les pages

--- a/expProfPage.html
+++ b/expProfPage.html
@@ -7,13 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Expériences professionnelles</title>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styleExpProfessionnelle.css">
+  
+  
+
   <link rel="shortcut icon" sizes="48x48" href="img/LogoINV.png" />
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script><!--Navigation bar link jquery-->
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script> <!-- go to top of the page -->
- 
+  
+
 </head>
 
 <body>
