--- a/skillPage.html
+++ b/skillPage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compétences</title>
     
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styleSkill.css">
   <link rel="shortcut icon" sizes="48x48" href="img/LogoINV.png" />
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
