--- a/contactPage.html
+++ b/contactPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -41,7 +41,7 @@
         <div>
           <span>
             <a href="https://istinnie.github.io/">
-              <img src="img/LogoINV.png" alt="Site web - logo" class="image-logo">
+              <img src="img/photoEntiere.jpg" alt="Site web - logo" class="image-logo">
             </a>
           </span>
         </div>
