Nettoyage de code

--- a/expProfPage.html
+++ b/expProfPage.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Expériences professionnelles</title>
 
-  <link rel="stylesheet" href="css/styleExpProfessionnelle.css">
+  <link rel="stylesheet" href="css/Nav/nav.css">  
+  <link rel="stylesheet" href="css/ExpPro/styleExpProfessionnelle.css">
   
   
 
@@ -78,11 +79,16 @@
 
         </div>
         <div class="timeline__event__description">
+            <div>Etude des besoins clients</div>
             <div>
               Développement d'applications avec Windev 27 - Webdev 27<br>
             </div> 
             <div>
-              Gestion de projet informatique
+              Déploiement d'applications sur le réseau<br>
+            </div>
+            <div>Gestion de base de données</div> 
+            <div>
+              Gestion de projets informatiques
             </div> 
                
         </div>
