--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>PORTFOLIO</title>
 
   <!-- <link rel="stylesheet" href="css/style.css"> -->
-  <link rel="stylesheet" href="css/styleFormation.css">
+  <link rel="stylesheet" href="css/Nav/nav.css">  
+  <link rel="stylesheet" href="css/Formation/styleFormation.css">
   <link rel="shortcut icon" sizes="48x48" href="img/LogoINV.png" />
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
