--- a/skillPage.html
+++ b/skillPage.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compétences</title>
-    
-  <link rel="stylesheet" href="css/styleSkill.css">
+  <link rel="stylesheet" href="css/Nav/nav.css">  
+  <link rel="stylesheet" href="css/Skill/styleSkill.css">
   <link rel="shortcut icon" sizes="48x48" href="img/LogoINV.png" />
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
@@ -55,6 +55,12 @@
                 <div id="Skill-PEDAGOGIE">
                   <span class="Skill-Area " >Pédagogie</span>
                   <span class="PercentText ">90%</span>
+                </div>
+              </div>
+              <div class="SkillBar">
+                <div id="Skill-MS" style="background-color: #364aca;">
+                  <span class="Skill-Area ">Polyvalence</span>
+                  <span class="PercentText ">80%</span>
                 </div>
               </div>
               <div class="SkillBar">
@@ -126,6 +132,12 @@
                   <span class="PercentText ">40%</span>
                 </div>
               </div> 
+              <div class="SkillBar">
+                <div id="Skill-SQL"style="background-color: #f7cc40;">
+                  <span class="Skill-Area ">Python</span>
+                  <span class="PercentText ">50%</span>
+                </div>
+              </div>
               <div class="SkillBar">
                 <div id="Skill-SQL">
                   <span class="Skill-Area ">SQL</span>
@@ -235,6 +247,18 @@
                 </div>
               </div>
               <div class="SkillBar">
+                <div id="Skill-WL" style="background-color: #b57652;">
+                  <span class="Skill-Area ">API</span>
+                  <span class="PercentText ">60%</span>
+                </div>
+              </div>
+              <div class="SkillBar">
+                <div id="Skill-ARDUINO">
+                  <span class="Skill-Area ">Carte Arduino</span>
+                  <span class="PercentText ">65%</span>
+                </div>
+              </div>
+              <div class="SkillBar">
                 <div id="Skill-SYMFONY" style="background-color: #007c7b;">
                   <span class="Skill-Area " >EasyVista</span>
                   <span class="PercentText ">55%</span>
@@ -267,7 +291,7 @@
              </div>
               
               <div class="SkillBar">
-                <div id="Skill-WL" style="background-color: #0c265f;">
+                <div id="Skill-LATEX" style="background-color: #0c265f;">
                   <span class="Skill-Area ">Proteus</span>
                   <span class="PercentText ">60%</span>
                 </div>
