--- a/contactPage.html
+++ b/contactPage.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
-
-  <link rel="stylesheet"  href="css/styleSkill.css">
+  <link rel="stylesheet" href="css/Nav/nav.css">  
+  <link rel="stylesheet"  href="css/Skill/styleSkill.css">
   <link rel="shortcut icon" sizes="48x48" href="img/LogoINV.png" />
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
