Add more informations in project page

--- a/skillPage.html
+++ b/skillPage.html
@@ -172,6 +172,12 @@
                 </div>
               </div>
               <div class="SkillBar">
+                <div id="Skill-SQL" style="background-color: #5bd3f3;  ">
+                  <span class="Skill-Area " style="color:#000000;">React</span>
+                  <span class="PercentText " style="color:#000000;">50%</span>
+                </div>
+              </div>
+              <div class="SkillBar">
                 <div id="Skill-SYMFONY">
                   <span class="Skill-Area ">Symfony 6</span>
                   <span class="PercentText ">55%</span>
