exp + project + skill + formation style pages Ok

--- a/skillPage.html
+++ b/skillPage.html
@@ -27,7 +27,7 @@
         <div>
             <h1>Mes compétences</h1>
         </div>
-        <div class="SkillFolder" style="width: 50%;">
+        <div class="SkillFolder" >
           <div class="skillTitle">
             Compétences humaines
           </div>
@@ -84,7 +84,7 @@
         </div>
 
 
-        <div class="SkillFolder" style="width: 50%;">
+        <div class="SkillFolder" >
           <div class="skillTitle">
             Langages Informatiques
           </div>
@@ -153,9 +153,9 @@
           </div>
         </div>
         <!-- framework -->
-        <div class="SkillFolder" style="width: 50%;">
+        <div class="SkillFolder" >
           <div class="skillTitle">
-            Framework et Atelier de Génie Logiciel
+            Framework et AGL
           </div>
           <div id="SkillBox">
               
@@ -202,7 +202,7 @@
         </div>
 
 
-        <div class="SkillFolder" style="width: 50%;">
+        <div class="SkillFolder"  >
           <div class="skillTitle">
             Base de Données
           </div>
@@ -238,7 +238,7 @@
           </div> 
         </div>
 
-        <div class="SkillFolder" style="width: 50%;">
+        <div class="SkillFolder"  >
           <div class="skillTitle">
             ERP et Autres outils
           </div>
