--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             class="txt-rotate"
             data-period="1000"
-            data-rotate='["Conceptrice Développeuse d’Application", "Ingénieure Informaticienne", "Ingénieure en Electronique et Informatique Industrielles"]'>
+            data-rotate='["Conceptrice Développeuse d’Applications", "Ingénieure Informaticienne", "Ingénieure en Electronique et Informatique Industrielles"]'>
          </span>
         
     </div>
