--- a/expProfPage.html
+++ b/expProfPage.html
@@ -37,7 +37,14 @@
     <div>
       <h1>Mes expériences professionnelles</h1>
     </div>
-    <div class="timeline__event__content ">
+    <div class="timeline"></div>
+      <div class="timeline__event__icon ">
+        <i class="lni-cake"></i>
+        <div class="timeline__event__date">
+          Depuis<br>Janvier 2024
+        </div>
+      </div>
+      <div class="timeline__event__content ">
       <div class="timeline__event__title">
         <span class="company">
           <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom:-2px;"width="20" height="20" fill="currentColor" class="bi bi-buildings" viewBox="0 0 16 16">
