--- a/expProfPage.html
+++ b/expProfPage.html
@@ -37,52 +37,56 @@
     <div>
       <h1>Mes expériences professionnelles</h1>
     </div>
-    <div class="timeline"></div>
-      <div class="timeline__event__icon ">
-        <i class="lni-cake"></i>
-        <div class="timeline__event__date">
-          Depuis<br>Janvier 2024
+    <div class="timeline">
+        <div class="timeline__event animated fadeInUp delay-1s timeline__event--type3">
+        
+          <div class="timeline__event__icon ">
+            <i class="lni-cake"></i>
+            <div class="timeline__event__date">
+              Depuis<br>Janvier 2024
+            </div>
+          </div>
+          <div class="timeline__event__content ">
+            <div class="timeline__event__title">
+              <span class="company">
+                <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom:-2px;"width="20" height="20" fill="currentColor" class="bi bi-buildings" viewBox="0 0 16 16">
+                  <path d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022ZM6 8.694 1 10.36V15h5V8.694ZM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15Z"/>
+                  <path d="M2 11h1v1H2v-1Zm2 0h1v1H4v-1Zm-2 2h1v1H2v-1Zm2 0h1v1H4v-1Zm4-4h1v1H8V9Zm2 0h1v1h-1V9Zm-2 2h1v1H8v-1Zm2 0h1v1h-1v-1Zm2-2h1v1h-1V9Zm0 2h1v1h-1v-1ZM8 7h1v1H8V7Zm2 0h1v1h-1V7Zm2 0h1v1h-1V7ZM8 5h1v1H8V5Zm2 0h1v1h-1V5Zm2 0h1v1h-1V5Zm0-2h1v1h-1V3Z"/>
+                </svg>
+                Schneider Electric
+              </span> 
+              <span class="team">
+                  <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom:-3px;" width="20" height="20" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
+                    <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
+                  </svg>
+                  Power Product
+              </span>
+              <span class="position"> 
+                <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom:-3px;"width="20" height="20" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+                  <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
+                  <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                </svg>
+                Eybens, Grenoble - FRANCE <br>
+              </span>
+              <span class="fonction">
+                Ingénieure Industrialisation de produits connectés
+              </span>
+            </div>
+            <div class="timeline__event__description">
+              <div>
+                Appropriation de l'IIoT Box
+              </div>
+              <div>
+                Proposition des cas d'utilisations;
+              </div>              
+              <div>
+                Proposition de l'architecture réseau et des conditions de sécurité;
+              </div>  
+              <div> Rédaction de cahier des charges;</div>
+              <div> Pilotage et gestion de projets;</div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="timeline__event__content ">
-      <div class="timeline__event__title">
-        <span class="company">
-          <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom:-2px;"width="20" height="20" fill="currentColor" class="bi bi-buildings" viewBox="0 0 16 16">
-            <path d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022ZM6 8.694 1 10.36V15h5V8.694ZM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15Z"/>
-            <path d="M2 11h1v1H2v-1Zm2 0h1v1H4v-1Zm-2 2h1v1H2v-1Zm2 0h1v1H4v-1Zm4-4h1v1H8V9Zm2 0h1v1h-1V9Zm-2 2h1v1H8v-1Zm2 0h1v1h-1v-1Zm2-2h1v1h-1V9Zm0 2h1v1h-1v-1ZM8 7h1v1H8V7Zm2 0h1v1h-1V7Zm2 0h1v1h-1V7ZM8 5h1v1H8V5Zm2 0h1v1h-1V5Zm2 0h1v1h-1V5Zm0-2h1v1h-1V3Z"/>
-          </svg>
-          Schneider Electric
-        </span> 
-        <span class="team">
-            <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom:-3px;" width="20" height="20" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
-              <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
-            </svg>
-            Power Product
-        </span>
-        <span class="position"> 
-          <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom:-3px;"width="20" height="20" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
-            <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
-            <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-          </svg>
-          Eybens, Grenoble - FRANCE <br>
-        </span>
-        <span class="fonction">
-          Ingénieure Industrialisation de produits connectés
-        </span>
-      </div>
-      <div class="timeline__event__description">
-        <div>
-          Appropriation de l'IIoT Box
-        </div>
-        <div>
-          Proposition des cas d'utilisations;
-        </div>              
-        <div>
-          Proposition de l'architecture réseau et des conditions de sécurité;
-        </div>  
-        <div> Rédaction de cahier des charges;</div>
-        <div> Pilotage et gestion de projets;</div>
-      </div>
     </div>
     <div class="timeline">
       <div class="timeline__event  animated fadeInUp delay-3s timeline__event--type1">
