--- a/expProfPage.html
+++ b/expProfPage.html
@@ -151,6 +151,7 @@
                 
           </div>
         </div>
+        </div>
       </div>
       <div class="timeline__event animated fadeInUp delay-2s timeline__event--type2">
         <div class="timeline__event__icon">
