--- a/formationPage.html
+++ b/formationPage.html
@@ -60,7 +60,7 @@
                 <span class="diplome">
                   <img style="margin-bottom: -5px;margin-right: 5px;" width="25" src="https://img.icons8.com/color/48/null/graduation-cap.png"/>
                   Mastère Spécialisé - Designer of Secure Devices IoT <br></span>  
-                  <span class="diplome">
+                  <span class="filiere">
                     <img style="margin-bottom: -5px;margin-right: 5px;" width="25" src="https://img.icons8.com/color/48/null/graduation-cap.png"/>
                     CQPM 142 - Chargée de Projets Industriels <br></span>  
                 
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-          <div class="timeline__event animated fadeInUp delay-1s timeline__event--type3">
+          <div class="timeline__event animated fadeInUp delay-2s timeline__event--type2">
             <div class="timeline__event__icon">
               <i class="lni-slim"></i>
 
