--- a/skillPage.html
+++ b/skillPage.html
@@ -135,11 +135,12 @@
                 </div>
               </div>
             <div class="SkillBar">
-                <div id="Skill-JS" style="background-color: #0174b4;">
+                <div id="Skill-JS" style="background-color: #db4136;">
                   <span class="Skill-Area ">Node-RED</span>
-                  <span class="PercentText "><img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/hourglass--v1.png" alt="hourglass--v1"/>
-                  </span>
+                  
                 </div>
+                <span class="PercentText "><img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/hourglass--v1.png" alt="hourglass--v1"/>
+                  </span>
               </div>
               <div class="SkillBar">
                 <div id="Skill-SYMFONY" style="background-color: #007c7b;">
