--- a/skillPage.html
+++ b/skillPage.html
@@ -84,10 +84,7 @@
         </div>
         <div class="SkillFolder"  >
           <div class="skillTitle">
-            IoT et Electronique
-            <span class="PercentText ">
-              <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/hourglass--v1.png" alt="hourglass--v1"/>
-            </span>
+            IoT et Electronique - Apprentissage en cours <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/000000/hourglass--v1.png" alt="hourglass--v1"/>
           </div>
           <div id="SkillBox">
             <div class="SkillBar">
