--- a/skillPage.html
+++ b/skillPage.html
@@ -84,8 +84,7 @@
         </div>
         <div class="SkillFolder"  >
           <div class="skillTitle">
-            IoT et Electronique - Apprentissage en cours <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/000000/hourglass--v1.png" alt="hourglass--v1"/>
-          </div>
+            IoT et Electronique - Apprentissage en cours ...</div>
           <div id="SkillBox">
             <div class="SkillBar">
               <div id="Skill-HTML" style="background-color: #e51e26;">
